feat: fix the request endpoint implementation
